client/tests/snapshots/render_snapshots__snapshot_matrix_despawn_midway.snap
---
source: tests/render_snapshots.rs
expression: "render(&o, &store(0))"
---










▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▀▀▀▀▀▀▀▀
