client/tests/snapshots/render_snapshots__snapshot_permission_bubble.snap
---
source: tests/render_snapshots.rs
expression: "render(&o, &store(0))"
---
▀▀▀▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
