client/tests/snapshots/render_snapshots__snapshot_selection_outline.snap
---
source: tests/render_snapshots.rs
expression: "render(&o, &store(0))"
---
▀▀▀▀▀▀▀▀▀▄
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▀▀▀▀▀▀▀ ▀
▀▄▄▄▄▄▄▄▄▀
