client/tests/snapshots/render_snapshots__snapshot_single_character.snap
---
source: tests/render_snapshots.rs
expression: "render(&o, &store(0))"
---
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
▀▀▀▀▀▀▀▀
